# python-project-83

./: Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  db.py  html.py  index.html  validator.py
page_analyzer/templates/: index.html  layout.html  list_of_urls.html  show.html
