[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
datetime = "^5.5"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
validators = "^0.28.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

